src/libqabstractitemview.h

typedef struct QAbstractItemView QAbstractItemView;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QItemSelection QItemSelection;
typedef struct QKeyEvent QKeyEvent;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QResizeEvent QResizeEvent;
typedef struct QSize QSize;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWidget QWidget;
void QAbstractItemView_VerticalScrollbarAction(QAbstractItemView* self, int action);
void QAbstractItemView_HorizontalScrollbarAction(QAbstractItemView* self, int action);
void QAbstractItemView_VerticalScrollbarValueChanged(QAbstractItemView* self, int value);
void QAbstractItemView_HorizontalScrollbarValueChanged(QAbstractItemView* self, int value);
void QAbstractItemView_CloseEditor(QAbstractItemView* self, QWidget* editor, int hint);
void QAbstractItemView_CommitData(QAbstractItemView* self, QWidget* editor);
void QAbstractItemView_EditorDestroyed(QAbstractItemView* self, QObject* editor);
void QAbstractItemView_Pressed(QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_Clicked(QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_DoubleClicked(QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_Activated(QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_Entered(QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_ViewportEntered(QAbstractItemView* self);
void QAbstractItemView_IconSizeChanged(QAbstractItemView* self, QSize* size);
QModelIndex* QAbstractItemView_MoveCursor(QAbstractItemView* self, int cursorAction, int modifiers);
int QAbstractItemView_HorizontalOffset(const QAbstractItemView* self);
int QAbstractItemView_VerticalOffset(const QAbstractItemView* self);
bool QAbstractItemView_IsIndexHidden(const QAbstractItemView* self, QModelIndex* index);
void QAbstractItemView_SetSelection(QAbstractItemView* self, QRect* rect, int command);
QRegion* QAbstractItemView_VisualRegionForSelection(const QAbstractItemView* self, QItemSelection* selection);
libqt_list /* of QModelIndex* */ QAbstractItemView_SelectedIndexes(const QAbstractItemView* self);
bool QAbstractItemView_Edit2(QAbstractItemView* self, QModelIndex* index, int trigger, QEvent* event);
int QAbstractItemView_SelectionCommand(const QAbstractItemView* self, QModelIndex* index, QEvent* event);
void QAbstractItemView_StartDrag(QAbstractItemView* self, int supportedActions);
void QAbstractItemView_InitViewItemOption(const QAbstractItemView* self, QStyleOptionViewItem* option);
bool QAbstractItemView_FocusNextPrevChild(QAbstractItemView* self, bool next);
bool QAbstractItemView_Event(QAbstractItemView* self, QEvent* event);
bool QAbstractItemView_ViewportEvent(QAbstractItemView* self, QEvent* event);
void QAbstractItemView_MousePressEvent(QAbstractItemView* self, QMouseEvent* event);
void QAbstractItemView_MouseMoveEvent(QAbstractItemView* self, QMouseEvent* event);
void QAbstractItemView_MouseReleaseEvent(QAbstractItemView* self, QMouseEvent* event);
void QAbstractItemView_MouseDoubleClickEvent(QAbstractItemView* self, QMouseEvent* event);
void QAbstractItemView_DragEnterEvent(QAbstractItemView* self, QDragEnterEvent* event);
void QAbstractItemView_DragMoveEvent(QAbstractItemView* self, QDragMoveEvent* event);
void QAbstractItemView_DragLeaveEvent(QAbstractItemView* self, QDragLeaveEvent* event);
void QAbstractItemView_DropEvent(QAbstractItemView* self, QDropEvent* event);
void QAbstractItemView_FocusInEvent(QAbstractItemView* self, QFocusEvent* event);
void QAbstractItemView_FocusOutEvent(QAbstractItemView* self, QFocusEvent* event);
void QAbstractItemView_KeyPressEvent(QAbstractItemView* self, QKeyEvent* event);
void QAbstractItemView_ResizeEvent(QAbstractItemView* self, QResizeEvent* event);
void QAbstractItemView_TimerEvent(QAbstractItemView* self, QTimerEvent* event);
void QAbstractItemView_InputMethodEvent(QAbstractItemView* self, QInputMethodEvent* event);
bool QAbstractItemView_EventFilter(QAbstractItemView* self, QObject* object, QEvent* event);
QSize* QAbstractItemView_ViewportSizeHint(const QAbstractItemView* self);
libqt_string QAbstractItemView_Tr2(const char* s, const char* c);
libqt_string QAbstractItemView_Tr3(const char* s, const char* c, int n);
int QAbstractItemView_State(const QAbstractItemView* self);
void QAbstractItemView_SetState(QAbstractItemView* self, int state);
void QAbstractItemView_ScheduleDelayedItemsLayout(QAbstractItemView* self);
void QAbstractItemView_ExecuteDelayedItemsLayout(QAbstractItemView* self);
void QAbstractItemView_SetDirtyRegion(QAbstractItemView* self, QRegion* region);
void QAbstractItemView_ScrollDirtyRegion(QAbstractItemView* self, int dx, int dy);
QPoint* QAbstractItemView_DirtyRegionOffset(const QAbstractItemView* self);
void QAbstractItemView_StartAutoScroll(QAbstractItemView* self);
void QAbstractItemView_StopAutoScroll(QAbstractItemView* self);
void QAbstractItemView_DoAutoScroll(QAbstractItemView* self);
int QAbstractItemView_DropIndicatorPosition(const QAbstractItemView* self);