src/libqabstractitemview.bf

	[LinkName("QAbstractItemView_VerticalScrollbarAction")]
	public static extern void QAbstractItemView_VerticalScrollbarAction(void* c_this, int32 action);
	[LinkName("QAbstractItemView_HorizontalScrollbarAction")]
	public static extern void QAbstractItemView_HorizontalScrollbarAction(void* c_this, int32 action);
	[LinkName("QAbstractItemView_VerticalScrollbarValueChanged")]
	public static extern void QAbstractItemView_VerticalScrollbarValueChanged(void* c_this, int32 value);
	[LinkName("QAbstractItemView_HorizontalScrollbarValueChanged")]
	public static extern void QAbstractItemView_HorizontalScrollbarValueChanged(void* c_this, int32 value);
	[LinkName("QAbstractItemView_CloseEditor")]
	public static extern void QAbstractItemView_CloseEditor(void* c_this, QWidget editor, int64 hint);
	[LinkName("QAbstractItemView_CommitData")]
	public static extern void QAbstractItemView_CommitData(void* c_this, QWidget editor);
	[LinkName("QAbstractItemView_EditorDestroyed")]
	public static extern void QAbstractItemView_EditorDestroyed(void* c_this, QObject editor);
	[LinkName("QAbstractItemView_Pressed")]
	public static extern void QAbstractItemView_Pressed(void* c_this, QModelIndex index);
	[LinkName("QAbstractItemView_Clicked")]
	public static extern void QAbstractItemView_Clicked(void* c_this, QModelIndex index);
	[LinkName("QAbstractItemView_DoubleClicked")]
	public static extern void QAbstractItemView_DoubleClicked(void* c_this, QModelIndex index);
	[LinkName("QAbstractItemView_Activated")]
	public static extern void QAbstractItemView_Activated(void* c_this, QModelIndex index);
	[LinkName("QAbstractItemView_Entered")]
	public static extern void QAbstractItemView_Entered(void* c_this, QModelIndex index);
	[LinkName("QAbstractItemView_ViewportEntered")]
	public static extern void QAbstractItemView_ViewportEntered(void* c_this);
	[LinkName("QAbstractItemView_IconSizeChanged")]
	public static extern void QAbstractItemView_IconSizeChanged(void* c_this, QSize size);
	[LinkName("QAbstractItemView_MoveCursor")]
	public static extern QModelIndex QAbstractItemView_MoveCursor(void* c_this, int64 cursorAction, int64 modifiers);
	[LinkName("QAbstractItemView_HorizontalOffset")]
	public static extern int32 QAbstractItemView_HorizontalOffset(void* c_this);
	[LinkName("QAbstractItemView_VerticalOffset")]
	public static extern int32 QAbstractItemView_VerticalOffset(void* c_this);
	[LinkName("QAbstractItemView_IsIndexHidden")]
	public static extern bool QAbstractItemView_IsIndexHidden(void* c_this, QModelIndex index);
	[LinkName("QAbstractItemView_SetSelection")]
	public static extern void QAbstractItemView_SetSelection(void* c_this, QRect rect, int64 command);
	[LinkName("QAbstractItemView_VisualRegionForSelection")]
	public static extern QRegion QAbstractItemView_VisualRegionForSelection(void* c_this, QItemSelection selection);
	[LinkName("QAbstractItemView_SelectedIndexes")]
	public static extern QModelIndex[] QAbstractItemView_SelectedIndexes(void* c_this);
	[LinkName("QAbstractItemView_Edit2")]
	public static extern bool QAbstractItemView_Edit2(void* c_this, QModelIndex index, int64 trigger, QEvent event);
	[LinkName("QAbstractItemView_SelectionCommand")]
	public static extern int64 QAbstractItemView_SelectionCommand(void* c_this, QModelIndex index, QEvent event);
	[LinkName("QAbstractItemView_StartDrag")]
	public static extern void QAbstractItemView_StartDrag(void* c_this, int64 supportedActions);
	[LinkName("QAbstractItemView_InitViewItemOption")]
	public static extern void QAbstractItemView_InitViewItemOption(void* c_this, QStyleOptionViewItem option);
	[LinkName("QAbstractItemView_State")]
	public static extern int64 QAbstractItemView_State(void* c_this);
	[LinkName("QAbstractItemView_SetState")]
	public static extern void QAbstractItemView_SetState(void* c_this, int64 state);
	[LinkName("QAbstractItemView_ScheduleDelayedItemsLayout")]
	public static extern void QAbstractItemView_ScheduleDelayedItemsLayout(void* c_this);
	[LinkName("QAbstractItemView_ExecuteDelayedItemsLayout")]
	public static extern void QAbstractItemView_ExecuteDelayedItemsLayout(void* c_this);
	[LinkName("QAbstractItemView_SetDirtyRegion")]
	public static extern void QAbstractItemView_SetDirtyRegion(void* c_this, QRegion region);
	[LinkName("QAbstractItemView_ScrollDirtyRegion")]
	public static extern void QAbstractItemView_ScrollDirtyRegion(void* c_this, int32 dx, int32 dy);
	[LinkName("QAbstractItemView_DirtyRegionOffset")]
	public static extern QPoint QAbstractItemView_DirtyRegionOffset(void* c_this);
	[LinkName("QAbstractItemView_StartAutoScroll")]
	public static extern void QAbstractItemView_StartAutoScroll(void* c_this);
	[LinkName("QAbstractItemView_StopAutoScroll")]
	public static extern void QAbstractItemView_StopAutoScroll(void* c_this);
	[LinkName("QAbstractItemView_DoAutoScroll")]
	public static extern void QAbstractItemView_DoAutoScroll(void* c_this);
	[LinkName("QAbstractItemView_FocusNextPrevChild")]
	public static extern bool QAbstractItemView_FocusNextPrevChild(void* c_this, bool next);
	[LinkName("QAbstractItemView_Event")]
	public static extern bool QAbstractItemView_Event(void* c_this, QEvent event);
	[LinkName("QAbstractItemView_ViewportEvent")]
	public static extern bool QAbstractItemView_ViewportEvent(void* c_this, QEvent event);
	[LinkName("QAbstractItemView_MousePressEvent")]
	public static extern void QAbstractItemView_MousePressEvent(void* c_this, QMouseEvent event);
	[LinkName("QAbstractItemView_MouseMoveEvent")]
	public static extern void QAbstractItemView_MouseMoveEvent(void* c_this, QMouseEvent event);
	[LinkName("QAbstractItemView_MouseReleaseEvent")]
	public static extern void QAbstractItemView_MouseReleaseEvent(void* c_this, QMouseEvent event);
	[LinkName("QAbstractItemView_MouseDoubleClickEvent")]
	public static extern void QAbstractItemView_MouseDoubleClickEvent(void* c_this, QMouseEvent event);
	[LinkName("QAbstractItemView_DragEnterEvent")]
	public static extern void QAbstractItemView_DragEnterEvent(void* c_this, QDragEnterEvent event);
	[LinkName("QAbstractItemView_DragMoveEvent")]
	public static extern void QAbstractItemView_DragMoveEvent(void* c_this, QDragMoveEvent event);
	[LinkName("QAbstractItemView_DragLeaveEvent")]
	public static extern void QAbstractItemView_DragLeaveEvent(void* c_this, QDragLeaveEvent event);
	[LinkName("QAbstractItemView_DropEvent")]
	public static extern void QAbstractItemView_DropEvent(void* c_this, QDropEvent event);
	[LinkName("QAbstractItemView_FocusInEvent")]
	public static extern void QAbstractItemView_FocusInEvent(void* c_this, QFocusEvent event);
	[LinkName("QAbstractItemView_FocusOutEvent")]
	public static extern void QAbstractItemView_FocusOutEvent(void* c_this, QFocusEvent event);
	[LinkName("QAbstractItemView_KeyPressEvent")]
	public static extern void QAbstractItemView_KeyPressEvent(void* c_this, QKeyEvent event);
	[LinkName("QAbstractItemView_ResizeEvent")]
	public static extern void QAbstractItemView_ResizeEvent(void* c_this, QResizeEvent event);
	[LinkName("QAbstractItemView_TimerEvent")]
	public static extern void QAbstractItemView_TimerEvent(void* c_this, QTimerEvent event);
	[LinkName("QAbstractItemView_InputMethodEvent")]
	public static extern void QAbstractItemView_InputMethodEvent(void* c_this, QInputMethodEvent event);
	[LinkName("QAbstractItemView_EventFilter")]
	public static extern bool QAbstractItemView_EventFilter(void* c_this, QObject object, QEvent event);
	[LinkName("QAbstractItemView_DropIndicatorPosition")]
	public static extern int64 QAbstractItemView_DropIndicatorPosition(void* c_this);
	[LinkName("QAbstractItemView_ViewportSizeHint")]
	public static extern QSize QAbstractItemView_ViewportSizeHint(void* c_this);
	[LinkName("QAbstractItemView_Tr2")]
	public static extern char8[] QAbstractItemView_Tr2(char8[] s, char8[] c);
	[LinkName("QAbstractItemView_Tr3")]
	public static extern char8[] QAbstractItemView_Tr3(char8[] s, char8[] c, int32 n);
}